--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - "v*" # Trigger on version tags like v1.0.0
+      - "v*"
 
 permissions:
   contents: write
@@ -15,23 +15,14 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Get version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v1 # Changed to v1
         with:
-          name: Release ${{ steps.get_version.outputs.VERSION }}
-          body_path: CHANGELOG.md # Optional
+          name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -69,11 +60,11 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross-compilation tools (Linux)
-        if: matrix.os == 'ubuntu-latest' && matrix.target != 'x86_64-unknown-linux-gnu'
+      - name: Install cross-compilation tools (Windows)
+        if: matrix.target == 'x86_64-pc-windows-gnu'
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64  # For Windows target
+          sudo apt-get install -y gcc-mingw-w64
 
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
@@ -118,11 +109,11 @@ jobs:
           fi
 
           cd ..
-          echo "archive=$ARCHIVE_NAME" >> $GITHUB_OUTPUT
+          echo "archive_name=$ARCHIVE_NAME" >> $GITHUB_OUTPUT
 
-      - name: Upload to release
-        uses: softprops/action-gh-release@v2
+      - name: Upload Release Asset
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          files: |
-            md-view-${{ matrix.name }}-${{ matrix.archive }}
+          files: md-view-${{ matrix.name }}-${{ matrix.archive }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
