--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,26 +9,8 @@ permissions:
   contents: write
 
 jobs:
-  create-release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1 # Changed to v1
-        with:
-          name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-          generate_release_notes: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   build-binaries:
     name: Build ${{ matrix.target }}
-    needs: create-release
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -101,7 +83,7 @@ jobs:
           fi
 
           # Create archive
-          ARCHIVE_NAME="md-view-${{ matrix.name }}-${{ matrix.archive }}"
+          ARCHIVE_NAME="md-view-${{ matrix.name }}.${{ matrix.archive }}"
           if [[ "${{ matrix.archive }}" == "zip" ]]; then
             zip -r "../$ARCHIVE_NAME" *
           else
@@ -110,10 +92,13 @@ jobs:
 
           cd ..
           echo "archive_name=$ARCHIVE_NAME" >> $GITHUB_OUTPUT
+          echo "path=$ARCHIVE_NAME" >> $GITHUB_OUTPUT
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: md-view-${{ matrix.name }}-${{ matrix.archive }}
+          files: |
+            ${{ steps.prepare.outputs.path }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
